--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
+html, body {
+  font-family: sans-serif;
+}
+
+.page {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+body {
+  padding: 0px;
+  margin: 0px;
+}
 .color-square {
   font-family: sans-serif;
   width: 300px;
@@ -6,3 +21,10 @@
   padding: 50px;
   margin: 20px;
 }
+button {
+  padding: 10px;
+  margin: 5px;
+  outline: none;
+}
+
+
